# SWAGGER

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/actions/setup-git/: action.yml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: algorithm.md  evaluation.md  tutorial.md
examples/: graph-builder-path.py  graph-builder.py  graph_manager_example.py  simulate_robot_graph_route.py  visualize_dynamic_path_planning.py  visualize_global_graph_on_image.py  visualize_path_planning.py  waypoint_graph_generation_example.py
infrastructure/cloudformation/: github-runners-stack.yml
integration/: README.md
integration/compass/: README.md
integration/compass/compass_swagger_navigator/: package.xml  setup.cfg  setup.py
integration/compass/compass_swagger_navigator/compass_swagger_navigator/: navigator.py
integration/compass/compass_swagger_navigator/launch/: compass_swagger_navigation.launch.py
integration/compass/compass_swagger_navigator/params/: params.yaml
integration/nav2/: README.md
integration/nav2/swagger_interfaces/: CMakeLists.txt  package.xml
integration/nav2/swagger_interfaces/msg/: RouteRequest.msg  RouteResult.msg
integration/nav2/swagger_interfaces/srv/: GenerateRoute.srv
integration/nav2/swagger_nav2_bringup/: CMakeLists.txt  package.xml
integration/nav2/swagger_nav2_bringup/launch/: rviz.launch.py  swagger_with_nav2.launch.py
integration/nav2/swagger_nav2_bringup/params/: swagger_nav2_config.yaml
integration/nav2/swagger_nav2_bringup/rviz/: swagger-nav2.rviz
integration/nav2/swagger_nav2_planner_plugin/: CMakeLists.txt  package.xml  swagger_planner_plugin.xml
integration/nav2/swagger_nav2_planner_plugin/include/swagger_nav2_planner_plugin/: swagger_planner_plugin.hpp
integration/nav2/swagger_nav2_planner_plugin/src/: swagger_planner_plugin.cpp
integration/nav2/swagger_planner/: package.xml  setup.cfg  setup.py
integration/nav2/swagger_planner/launch/: planner.launch.py
integration/nav2/swagger_planner/swagger_planner/: swagger_route_planner.py
integration/nav2/tools/: README.md  gml_to_geojson.py
integration/nav2/tools/test/: test_gml_to_geojson.py
scripts/: evaluate_graph.py  generate_graph.py  rest_api.py  test_api_client.py
swagger/: __init__.py  endpoints.py  global_graph_generator.py  graph_evaluator.py  graph_manager.py  logger.py  models.py  performance_evaluator.py  utils.py  waypoint_graph_generator.py
swagger/tests/: test_endpoints.py  test_evaluators.py  test_graph_manager.py  test_routing.py  test_utils.py  test_waypoint_graph_generator.py
