[tool.poetry]
name = "swagger"
version = "0.1.0"
description = "SWAGGER: Sparse WAypoint Graph Generation for Efficient Routing"
authors = []
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
colorlog = ">=6.9.0,<7.0.0"
cucim-cu12 = ">=25.4.0,<26.0.0"
fastapi = ">=0.115.12,<0.116.0"
fastapi-versioning = ">=0.10.0,<0.11.0"
h11 = ">=0.16.0"
httpx = ">=0.28.1,<0.29.0"
networkx = ">=3.4.2,<4.0.0"
numba = ">=0.61.2,<0.62.0"
numpy = ">=1.21.0,<2.0"
numpydantic = ">=1.6.8,<2.0.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
psutil = ">=7.0.0,<8.0.0"
pydantic = ">=2.11.4,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"
rtree = ">=1.4.0,<2.0.0"
scikit-image = ">=0.25.2,<0.26.0"
scipy = ">=1.11.4,<2.0.0"
skan = ">=0.12.2,<0.13.0"
tyro = ">=0.9.19,<0.10.0"
uvicorn = ">=0.34.2,<0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
